--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "anthropic>=0.49.0",
-    "mcp>=1.3.0",
+    "httpx>=0.28.1",
+    "mcp[cli]>=1.3.0",
     "python-dotenv>=1.0.1",
 ]
