--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,6 @@ dependencies = [
     "anthropic>=0.49.0",
     "httpx>=0.28.1",
     "mcp[cli]>=1.3.0",
+    "openai>=1.65.3",
     "python-dotenv>=1.0.1",
 ]
